--- a/Archivo clase/index.html
+++ b/Archivo clase/index.html
@@ -15,6 +15,7 @@
             <th>PARTIDOS</th>
             <th>PUNTOS</th>
             <th>ESCUDO</th>
+            <th>ESCUDO</th>
         </thead>
         <tbody>
             <tr>
@@ -22,25 +23,28 @@
                 <td>5</td>
                 <td>15</td>
                 <td><img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="" width="100px" height="100px"></td>
-                <td><img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="" width="100px" height="100px"></td>
+                <td><img src="img/Escudo colombia.png" alt="" width="100px" height="100px">
             </tr>
             <tr>
                 <td>Brasil</td>
                 <td>4</td>
                 <td>12</td>
-                <td></td>
+                <td><img src="https://toppng.com/uploads/preview/brasil-escudo-brasil-federacion-de-futbol-de-brasil-11562945853pvtcwlngqi.png" alt="" width="100px" height="100px"></td>
+                <td><img src="IMG/Logo_Brasil.png" alt="" width="|00px" height="100px">
             </tr>
             <tr>
                 <td>Argentina</td>
                 <td>3</td>
                 <td>9</td>
-                <td></td>
+                <td><img src="https://as01.epimg.net/img/comunes/fotos/fichas/equipos/large/1879.png" alt="" width="100px" height="100px"></td>
+                <td><img src="img/Escudo Argentina.png" alt="" width="100px" height="100px"></td>
             </tr>
             <tr>
                 <td>Venezuela</td>
                 <td>2</td>
                 <td>6</td>
-                <td></td>
+                <td><img src="https://as00.epimg.net/img/comunes/fotos/fichas/equipos/large/2930.png" alt="" width="100px" height="100px"></td>
+                <td><img src="img/Escudo venezuela.png" alt="" width="100px" height="100px"></td>
             </tr>
         </tbody>
     </table>
