--- a/Archivo clase/index.html
+++ b/Archivo clase/index.html
@@ -38,6 +38,11 @@
     <ul>
         <li>   <a href="../Archivo clase/HTML/semantica.html" class="btn">SEMANTICA</a></li>
     </ul>
+    
+    <link rel="stylesheet" href="../Archivo clase/HTML/style.css">
+    <ul>
+        <li>   <a href="../Archivo clase/HTML/estilos.html" class="btn">estilos</a></li>
+    </ul>
 
 
 <body>
