arreglos en casa

--- a/Archivo clase/HTML/estilos.html
+++ b/Archivo clase/HTML/estilos.html
@@ -26,6 +26,9 @@
     
 <H1 style="color: red;background-color: aquamarine;">Bienvenido a estilos</H1>
 <a href="../index.html">Volver Atras</a>
+<a href="#">opcion 1</a>
+<a href="#">opcion 2</a>
+<a href="#">opcion 3</a>
 <br>
 <ul>
     <li id="option_one" class="group_options group_class"name="group_options">palabra1</li>
@@ -39,10 +42,10 @@
 <label for="mas">Masculino:</label><input type="radio" name="sexo">
 <label for="fem">Femenino:</label><input type="radio" name="sexo">
 
-<input type="text">
+<input type="text" disabled>
 <input type="text">
 <button>ENVIAR</button>
-<br>
+<br><br><br>
 <div id="papa">
     <div class="hermanos">
         <span>Juan David</span>
@@ -50,7 +53,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempore culpa nesciunt modi voluptate impedit quaerat harum eligendi. Voluptatem accusantium odio ratione deserunt eos dolores laboriosam veritatis dignissimos nostrum beatae.</p>
         <a href="#">ETIQUETA A</a>
     </div>
-    <div class="hermanos">
+    <div class="hermanos"></div>
+    <div>
         <span>Juan David</span>
         <span>Chavez Quintero</span>
     </div>
@@ -58,6 +62,6 @@
         <a href="#">ETIQUETA DOS</a>
     </div>
 </div>
-
+<br><br><br>
 </body>
 </html>
