--- a/Archivo clase/HTML/estilos.html
+++ b/Archivo clase/HTML/estilos.html
@@ -24,6 +24,13 @@
 </head>
 <body>
     
+    <h2 id="tittle_box">BOX MODEL</h2>
+    <!-- h2#title_box{BOX MODEL} -->
+    <div id="box_father">
+        <div id="box_model"></div>
+
+    
+
 <H1 style="color: red;background-color: aquamarine;">Bienvenido a estilos</H1>
 <a href="../index.html">Volver Atras</a>
 <a href="#">opcion 1</a>
@@ -63,5 +70,9 @@
     </div>
 </div>
 <br><br><br>
+
+
+
+
 </body>
 </html>
