--- a/Archivo clase/index.html
+++ b/Archivo clase/index.html
@@ -46,6 +46,11 @@
         <li>   <a href="HTML/estilos.html" class="btn">ESTILOS</a></li>
     </ul>
 
+    <link rel="stylesheet" href="../Archivo clase/HTML/style.css">
+    <ul>
+        <li>   <a href="HTML/flexbox.html" class="btn">FLEXBOX</a></li>
+    </ul>
+
      
 </body>
 </html>
